--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -68,6 +68,7 @@
 	  <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.7" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
 	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	  <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
 	</ItemGroup>
 
 </Project>
