--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /ShoppingList/Resources/Raw/krogerapiconfig.json
+/ShoppingList/Resources/Raw/krogerapiconfig-test.json
