--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -74,6 +74,7 @@
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
 	  <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.7" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+	  <PackageReference Include="SkiaSharp" Version="2.88.0" />
 	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 	  <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
 	</ItemGroup>
