--- a/ShoppingList/Platforms/iOS/Info.plist
+++ b/ShoppingList/Platforms/iOS/Info.plist
@@ -26,6 +26,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleIdentifier</key>
+	<string>dev.programmingwithchris.ShoppingList</string>
+	<key>Build</key>
+	<integer>1</integer>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 </dict>
