--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		 <TargetFrameworks>net6.0-ios;</TargetFrameworks>
+		 <TargetFrameworks>net6.0-ios;net6.0-android;</TargetFrameworks>
     <!-- <TargetFrameworks>net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>-->
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>
+		<!--<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>-->
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net6.0-tizen</TargetFrameworks> -->
 		
@@ -81,7 +81,7 @@
   	  <None Remove="Tests\**" />
   	  <None Remove="SQLiteNetExtensions" />
   	  <None Remove="Microsoft.Data.Sqlite.Core" />
-  	  <None Remove="sqlite-net-static" />
+      <None Remove="sqlite-net-pcl" />
   	  <None Remove="Drawable\" />
   	  <None Remove="Resources\APIs\krogerapiconfig.json" />
   	  <None Remove="Controls\" />
@@ -95,10 +95,11 @@
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.0.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-preview.7.22376.2" />
 	  <PackageReference Include="Microsoft.Maui.Graphics" Version="6.0.403" />
 	  <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.59" />
+	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 	  <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
-	  <PackageReference Include="sqlite-net-static" Version="1.8.116" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -145,13 +146,23 @@
 
 	<ItemGroup>
 	  <Folder Include="Resources\APIs\" />
-	  <Folder Include="Drawable\" />
 	  <Folder Include="Controls\" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <EmbeddedResource Include="Resources\Images\plus_sign.png" />
 	</ItemGroup>
+
+	<!--<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-android'">
+	  <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3.android">
+	    <Version>2.1.0</Version>
+	  </PackageReference>
+	  <PackageReference Include="SQLitePCLRaw.provider.e_sqlite3.android">
+	    <Version>1.1.14</Version>
+	  </PackageReference>
+	</ItemGroup>-->
+
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionShoppingListHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 	
    <!-- <PropertyGroup Condition="$(TargetFramework.Contains('-ios'))">
 		<RuntimeIdentifier>ios-arm64</RuntimeIdentifier>
