--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /ShoppingList/Resources/Raw/krogerapiconfig.json
 /ShoppingList/Resources/Raw/krogerapiconfig-test.json
+/ShoppingList/Controls/CircularButton.cs
