--- a/ShoppingList/ShoppingList.csproj
+++ b/ShoppingList/ShoppingList.csproj
@@ -139,6 +139,7 @@
 
 	<ItemGroup>
 	  <EmbeddedResource Include="Resources\Images\plus_sign.png" />
+	  <EmbeddedResource Include="Resources\Images\undo.png" />
 	</ItemGroup>
 
 	<!--<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-android'">
@@ -150,6 +151,9 @@
 	  </PackageReference>
 	</ItemGroup>-->
 
+	<ItemGroup>
+	  <MauiImage Remove="Resources\Images\undo.png" />
+	</ItemGroup>
 	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionShoppingListHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 	
    <!-- <PropertyGroup Condition="$(TargetFramework.Contains('-ios'))">
