Latest UI updates

--- a/ShoppingList/Platforms/iOS/Info.plist
+++ b/ShoppingList/Platforms/iOS/Info.plist
@@ -25,5 +25,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 </dict>
 </plist>
