Some small updates - flyout text color being one

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /Resources/Raw/krogerapiconfig.json
 /ShoppingList/Resources/Raw/krogerapiconfig.json
+/ShoppingList/Resources/Raw/krogerapiconfig-test.json
